# ilskehanteraren

./: README.md  pyproject.toml  se.danielnylander.ilskehanteraren.desktop
.tx/: config
po/: ilskehanteraren.pot  sv.mo  sv.po
src/ilskehanteraren/: main.py
